Fix for Layout issue in Internet Explorer. (#2367)

--- a/packager/app/styles/packager/fields.scss
+++ b/packager/app/styles/packager/fields.scss
@@ -4,6 +4,7 @@
     padding: rsa-whitespace();
   }
   &__fields {
+    width: 800px;
     .field {
       padding: rsa-whitespace();
       .ember-text-area {
